# argus

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  NOTES-151.md  README.md  SUMMARY.md  fix_engine_backtest_config.py  fix_engine_dict.py  fix_engine_reality_gap_bugs.py  fix_engine_reality_gap_missing.py  fix_main_route.py  fix_main_route_bottom.py  fix_mock_drift.py  fix_rate_limiting_feedback.py  fix_schemas_and_route.py  fix_structural_numba.py  fix_test_api_assert.py  fix_test_conftest.py  fix_warmup_jit.py  landing-page.html  patch_config.py  patch_engine.py  patch_indicators.py  pyproject.toml  render.yaml  rewrite_engine_run.py  skills-lock.json  summary.md  summary.txt  test_engine.py  update_engine_fidelity.py
.agent/: modularity_budget.json
.agent/.jules/: README.md  bolt.md  realignment.md
.agent/handoffs/: HANDOFF_PACKET_TEMPLATE.md  SECTION3_OWNERSHIP_CHECKLIST.md  SECTION4_OWNERSHIP_CHECKLIST.md
.agent/ownership/: README.md  branch_ownership.json
.agent/rules/: coding-standards.md  git-workflow.md  performance.md  testing.md  workspace.md
.agent/workflows/: fix.md  implement.md  issue.md  learn.md  perf.md  plan.md  pr.md  review.md  verify.md
.agents/rules/: performance.md  workspace.md
.codex/environments/: environment.toml
.github/: WORKTREE_CLEANUP.md  argus-env.sh  canary-browser.sh  canary-render.sh  cleanup-worktree.sh  dev.sh  local-smoke.sh  private-alpha-release-profile.json  private-alpha-release-profile.py  qa.sh  render-env-sync.sh  setup-worktree-env.sh  setup.sh  stale-backtest-jobs.sh  warmup-render.sh  workflow-proof.sh
.github/workflows/: agent-runtime-regression.yml  ci.yml  deploy.yml  private-alpha-canary.yml  private-alpha-smoke.yml
.hypothesis/constants/: 0241ecb51f939fb9  06f0543f375ee3a3  10e5ec7bcecd14ce  15334d6c89edecd6  18239913e3e7bf74  2addfb2a168dd0bf  3e3791f28715f801  581575caadcf9eb2  5e56ca25daa5f5a6  5e889c11a446ea81  5f4bc7de3b6cc5f5  630b7e833ad0216c  6afb47a9918f1746  6c2b8a06860b80e0  7896904f12480ed3  7f35917962a74f15  94687c8af6d367c1  b63c34f1b506287c  b961b561f5b19d9b  bdcfe4386ae623c5  c3ebc1cb6fac9c36  c5d092d0c246a1bd  d511c642cfd4ba32  dbd32e27666ed565  dc23c83ae481573b  e093db02facdad18  e5c06a08261e5118  e6adc4cfbbf5dad4  f3b2575732d8f8f9
.jules/: bolt.md  palette.md
archive-v0.1/: README.md
archive-v0.1/scripts/: check_openapi.sh
archive-v0.1/tests/: conftest.py  test_api.py  test_assets.py  test_auth.py  test_config.py  test_data_provider.py  test_nan_stability.py  test_persistence.py  test_sso.py  test_strategies_api.py
archive-v0.1/web/: .gitignore  build_log.txt  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts
docs/: API_CONTRACT.md  ARCHITECTURE.md  ARGUS_SYSTEM_STEERING.md  CONVERSATIONAL_RUNTIME.md  DATA_MODEL.md  LAUNCH_GATE_FINAL_CLOSURE_PLAN.md  PRIVATE_LAUNCH_RUNBOOK.md  PRODUCT.md  PRODUCTION_READINESS_AUDIT.md  QA_CONVERSATIONAL_TRANSCRIPTS.md  TROUBLESHOOTING.md  private_beta_runbook.md  startup.md
docs/api/: api_contract.md  api_contract_v1.0.0.md  api_sketch.md  openapi.yaml
docs/archive/: 2026-07-19-adaptive-result-chart-range-design.md  2026-07-19-adaptive-result-chart-range-implementation.md  2026-07-22-capability-truth-executable-boundary-design.md  ARGUS_SYSTEM_STEERING.md  LAUNCH_GATE_FINAL_CLOSURE_PLAN.md  PRODUCTION_READINESS_AUDIT.md  README.md  issue-151-card-materialization-repro.md  issue-171-repro-notes.md  private-alpha-backtest-execution-capacity.md  private-alpha-controlled-readiness-panel.md  private-alpha-conversation-trust.md  private-alpha-interim-issue-roadmap-2026-07-21.md  private-alpha-next-p2.1-capability-audit.md  (+3 more)
scripts/: check_modularity_budget.py  check_openapi.sh  generate_openapi_artifact.py
supabase/: config.toml  seed.sql
tests/: conftest.py  test_agent.py  test_agent_jules_contracts.py  test_agent_measurement_events.py  test_agent_runtime_checkpointer.py  test_allowance_accounting.py  test_allowance_accounting_composition.py  test_allowance_accounting_postgres.py  test_alpaca_fetcher.py  test_alpha_api.py  test_alpha_api_supabase.py  test_alpha_artifacts.py  test_alpha_orchestration_regression.py  test_alpha_readiness_metrics.py  test_api.py  test_api_import_boundary.py  test_artifact_naming.py  test_assets.py  test_auth.py  test_auth_sessions.py  test_backtest_admission.py  test_backtest_admission_api.py  test_backtest_admission_migration.py  test_backtest_admission_postgres.py  test_backtest_finalization.py  test_backtest_job_by_action.py  test_backtest_jobs_async.py  test_backtest_jobs_poll_calls.py  test_backtest_jobs_shadow.py  test_backtest_message_projection.py  test_backtest_service_calendar.py  test_backtest_state_machine.py  test_canary_capture_replay.py  test_canary_capture_sanitizer.py  test_chat_action_contract.py  test_chat_backtest_state_machine.py  test_chat_request_admission.py  test_chat_request_bounds.py  test_chat_runtime_cutover.py  test_chat_runtime_reload_guardrails.py  (+61 more)
web/: .env.local.example  .gitignore  build_log.txt  bun-test.d.ts  bunfig.toml  eslint.config.mjs  fix_effect.py  fix_type_errors.py  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.qa.config.ts  proxy.ts  tailwind.config.ts  test-setup.ts
workflows/: __init__.py  backtest_job.py  main.py  proof.py  requirements.txt  trigger_proof.py
(+838 files in other folders)
